# acp-cpp

./: CMakeLists.txt
.devcontainer/: devcontainer.json  setup.sh
acp-lib/: CMakeLists.txt  codec.cpp  json_value.cpp  serialization.cpp  serialization.hpp
acp-lib/include/acp/: codec.hpp  serialization.hpp  transport.hpp
acp-lib/include/acp/message/: annotations.hpp  audio_content.hpp  blob_resource_contents.hpp  content.hpp  content_block.hpp  create_terminal_request.hpp  diff.hpp  embedded_resource.hpp  embedded_resource_resouce.hpp  env_variable.hpp  image_content.hpp  kill_terminal_request.hpp  message.hpp  permission_option.hpp  permission_option_id.hpp  permission_option_kind.hpp  read_text_file_request.hpp  release_terminal_request.hpp  request_id.hpp  request_permission_request.hpp  resource_link.hpp  role.hpp  session_id.hpp  terminal.hpp  terminal_id.hpp  terminal_output_request.hpp  text_content.hpp  text_resource_contents.hpp  tool_call_content.hpp  tool_call_id.hpp  tool_call_location.hpp  tool_call_status.hpp  tool_call_update.hpp  tool_kind.hpp  wait_for_terminal_exit_request.hpp  write_text_file_request.hpp
acp-lib/include/acp/util/: checked_string.hpp  json_value.hpp  uuid.hpp
tests/: CMakeLists.txt  json_value_test.cpp  serialization_test.cpp
